   the "sudoers_policy" plugin in sudo.conf were not being applied.
   The sudoers file is now parsed by the "sudoers_audit" plugin,
   which is loaded implicitly when "sudoers_policy" is listed in
   sudo.conf.  Starting with sudo 1.9.3, if there are plugin arguments
   for "sudoers_policy" but "sudoers_audit" is not listed, those
   arguments will be applied to "sudoers_audit" instead.

What's new in Sudo 1.9.2

 * Fixed package builds on RedHat Enterprise Linux 8.

 * The configure script now uses pkg-config to find the openssl
   cflags and libs where possible.

 * The contents of the log.json I/O log file is now documented in
   the sudoers manual.

 * The sudoers plugin now properly exports the sudoers_audit symbol
   on systems where the compiler lacks symbol visibility controls.
   This caused a regression in 1.9.1 where a successful sudo command
   was not logged due to the missing audit plugin.  Bug #931.

 * Fixed a regression introduced in 1.9.1 that can result in crash
   when there is a syntax error in the sudoers file.  Bug #934.

What's new in Sudo 1.9.1

 * Fixed an AIX-specific problem when I/O logging was enabled.
   The terminal device was not being properly set to raw mode.
   Bug #927.

 * Corrected handling of sudo_logsrvd connections without associated
   I/O log data.  This fixes support for RejectMessage as well as
   AcceptMessage when the expect_iobufs flag is not set.

 * Added an "iolog_path" entry to the JSON-format event log produced
   by sudo_logsrvd.  Previously, it was only possible to determine
   the I/O log file an event belonged to using sudo-format logs.

 * Fixed the bundle IDs for sudo-logsrvd and sudo-python macOS packages.

 * I/O log files produced by the sudoers plugin now clear the write
   bits on the I/O log timing file when the log is complete.  This
   is consistent with how sudo_logsrvd indicates that a log is
   complete.

 * The sudoreplay utility has a new "-F" (follow) command line